added the details for functions
1. Added the 2 div tags card ,search inside of search added input tag and button and search icon image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 <body>
     <h1>This is the first day of the creating the project from scratch</h1>
 
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="Enter the City Name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+
+        </div>
+
+
+    </div>
 </body>
 </html>
