--- a/index.html
+++ b/index.html
@@ -7,15 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is the first day of the creating the project from scratch</h1>
-
-    <div class="card">
+     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter the City Name" spellcheck="false">
             <button><img src="images/search.png"></button>
 
         </div>
+        <div class="Weather">
+            <img src="images/rain.png" alt="No image" class="Weather-icon">
+            <h1 class="Tempreture">22°C</h1>
+            <h2 class="City-Name">New York</h2>
+            
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="no">
+                    <div>
+                        <p class="Humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
 
+                </div>
+                <div class="col">
+                    <img src="images/wind.png" alt="no">
+                    <div>
+                        <p class="Wind">20km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 </body>
